# rt-game-style

./: .coverage  .gitignore  .gitmodules  LICENSE  METRICS.md  README.md  justfile  pyproject.toml
baselines/: .gitignore  justfile
baselines/adaattn/: .gitignore  README.md  generate.py  justfile  pyproject.toml
baselines/gbgst/: .gitignore  README.md  generate.py  generate_video.py  justfile  pyproject.toml
baselines/mambast/: .gitignore  README.md  generate.py  justfile  pyproject.toml
baselines/shared/: README.md  download_coco.py  pyproject.toml
evaluation/: .gitkeep
rt_games/: __init__.py  cli.py  config.py  extract_frames.py
rt_games/data/: io.py  transforms.py
rt_games/metrics/: __init__.py  composite.py  depth.py  perceptual.py  style.py  temporal.py
rt_games/models/: art_inception.py  inception.py  midas.py  vgg.py
rt_games/utils/: cache.py  flow.py  registry.py  warp.py
tests/: conftest.py  test_cache.py  test_cli.py  test_composite.py  test_io.py  test_perceptual.py  test_registry.py  test_style.py  test_temporal.py
