[project]
name = "gbgst-baseline"
version = "0.1.0"
description = "GBGST: G-buffer Guided Style Transfer for Computer Games"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "pillow",
    "tqdm",
    "opencv-python>=4.12.0.88",
    "kornia>=0.8.2",
    "timm>=1.0.24",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.uv]
# This is a standalone project, not part of a workspace
# It has its own lockfile to handle potential dependency conflicts

